<resources>
    <string name="app_name">CryptoTracker</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="MainFragmentTitle">Main</string>
    <string name="FavoriteFragmentTitle">Favorite</string>
    <string name="EducationFragmentTitle">Education</string>
    <string name="InvestmentFragmentTitle">Investment</string>
    <string name="yourInvestmentString">Investment</string>
    <string name="marketString">Market</string>
    <string name="differenceString">Difference</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Settings Strings-->
        <string name="data_settings">Data Settings</string>
        <string name="clear_database_title">Clear Database</string>
        <string name="clear_database_summary">Delete all data from the database</string>
        <string name="layout_settings">Layout Settings</string>
        <string name="alternative_layout_title">Use Alternative Layout</string>
        <string name="alternative_layout_summary">Toggle to use an alternative layout for the Detail Page</string>
        <string name="currency_settings">Currency Settings</string>
        <string name="currency_title">Select Currency</string>




</resources>