<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/data_settings">
        <Preference
            android:key="clear_database"
            android:title="@string/clear_database_title"
            android:summary="@string/clear_database_summary" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/layout_settings">
        <SwitchPreferenceCompat
            android:key="alternative_layout"
            android:title="@string/alternative_layout_title"
            android:summary="@string/alternative_layout_summary"
            android:defaultValue="false" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/currency_settings">
        <ListPreference
            android:key="currency"
            android:title="@string/currency_title"
            android:defaultValue="USD"
            android:entries="@array/currency_entries"
            android:entryValues="@array/currency_entry_values"
            android:summary="%s" />
    </PreferenceCategory>
</PreferenceScreen>
