<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/mainFragment">
    <fragment
        android:id="@+id/mainFragment"
        android:name="com.project.app.cryptotracker.Dashboard.MainFragment"
        android:label="@string/MainFragmentTitle"
        tools:layout="@layout/fragment_main" />
    <fragment
        android:id="@+id/favoritesFragment"
        android:name="com.project.app.cryptotracker.Dashboard.FavoritesFragment"
        android:label="@string/FavoriteFragmentTitle"
        tools:layout="@layout/fragment_favorites" />
    <fragment
        android:id="@+id/educationFragment"
        android:name="com.project.app.cryptotracker.Dashboard.EducationFragment"
        android:label="@string/EducationFragmentTitle"
        tools:layout="@layout/fragment_education" />
    <fragment
        android:id="@+id/investmentFragment"
        android:name="com.project.app.cryptotracker.Dashboard.InvestmentFragment"
        android:label="@string/InvestmentFragmentTitle"
        tools:layout="@layout/fragment_investment" />
</navigation>